--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/Fundo.png");
+    background-image: url("img/fundo.png");
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
